[gd_scene load_steps=2 format=3 uid="uid://cj1naildc5r7d"]

[ext_resource type="Script" uid="uid://ccio5xggdmjjg" path="res://main/enemy_attack_mini_games/enemy_attack_shield_orbit/enemy_attack_shield_orbit.gd" id="1_d5xgv"]

[node name="EnemyAttackShieldOrbit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_d5xgv")

[node name="PlayArea" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerVisual" type="ColorRect" parent="PlayArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShieldPivot" type="Node2D" parent="PlayArea"]
visible = false

[node name="Shield" type="ColorRect" parent="PlayArea/ShieldPivot"]
custom_minimum_size = Vector2(48, 15)
offset_right = 48.0
offset_bottom = 15.0

[node name="BulletsContainer" type="Control" parent="PlayArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnTimer" type="Timer" parent="."]

[node name="HUD" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
